--- a/root/profile/profile.css
+++ b/root/profile/profile.css
@@ -1,5 +1,5 @@
 html {
-    overflow: hidden; /* Stops any scrolling left or right at all */
+    overflow-x: hidden; /* Stops any scrolling left or right at all */
     background-color: var(--color-bg-primary);
     color: var(--color-text-primary)
 }
